// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> by default on desktop matches with snapshot 1`] = `
<div
  className="carousel__FlexContainer-sc-1o67jdh-0 hhpJPM k-Carousel"
>
  <div
    className="carousel-inner__StyledCarouselInner-wljpd2-0 jBSEkH k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="carousel-inner__StyledCarouselPageContainer-wljpd2-1 iqOkuU k-Carousel__inner__pageContainer"
      onClick={[Function]}
    >
      <div
        className="carousel-page__StyledPage-sc-12ynwqa-0 fKfWlh k-Carousel__page"
      >
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 cTnAZH k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="marger__StyledMarger-q3lecu-0 evHeqt k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="marger__StyledMarger-q3lecu-0 fXmpKT k-ProjectCard__grid--flex"
              >
                <p
                  className="title__StyledTitle-sc-46lshq-0 gvbUmN k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 gyNZwb k-Carousel__page__item"
        />
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 gyNZwb k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> by default on mobile matches with snapshot 1`] = `
<div
  className="carousel__FlexContainer-sc-1o67jdh-0 hhpJPM k-Carousel"
>
  <div
    className="carousel-inner__StyledCarouselInner-wljpd2-0 jBSEkH k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="carousel-inner__StyledCarouselPageContainer-wljpd2-1 iqOkuU k-Carousel__inner__pageContainer"
      onClick={[Function]}
    >
      <div
        className="carousel-page__StyledPage-sc-12ynwqa-0 fKfWlh k-Carousel__page"
      >
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 cTnAZH k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="marger__StyledMarger-q3lecu-0 evHeqt k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="marger__StyledMarger-q3lecu-0 fXmpKT k-ProjectCard__grid--flex"
              >
                <p
                  className="title__StyledTitle-sc-46lshq-0 gvbUmN k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 dGWhDF k-Carousel__page__item"
        />
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 dGWhDF k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> with loop prop on desktop matches with snapshot 1`] = `
<div
  className="carousel__FlexContainer-sc-1o67jdh-0 hhpJPM k-Carousel"
>
  <div
    className="carousel-inner__StyledCarouselInner-wljpd2-0 jBSEkH k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="carousel-inner__StyledCarouselPageContainer-wljpd2-1 iqOkuU k-Carousel__inner__pageContainer"
      onClick={[Function]}
    >
      <div
        className="carousel-page__StyledPage-sc-12ynwqa-0 fKfWlh k-Carousel__page"
      >
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 cTnAZH k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="marger__StyledMarger-q3lecu-0 evHeqt k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="marger__StyledMarger-q3lecu-0 fXmpKT k-ProjectCard__grid--flex"
              >
                <p
                  className="title__StyledTitle-sc-46lshq-0 gvbUmN k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 gyNZwb k-Carousel__page__item"
        />
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 gyNZwb k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;
